Chat Event Bugfix
Fixes Chat Event messages not showing up

--- a/css/megaMod.css
+++ b/css/megaMod.css
@@ -815,6 +815,11 @@
   opacity: 1;
 }
 
+/* Fix Chat Event Visibility */
+.chat-event {
+    display: inherit !important;
+}
+
 /* Chat Blacklist Highlight */
 .chat-highlight {
 	color: red;
